--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^19.2.1",
     "three": "^0.182.0",
     "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.4.2"
+    "@react-three/fiber": "^9.4.2",
+    "@google/genai": "^1.33.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
